--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,6 @@
 <div class="pages">
-<h1>О РАБОТЕ ВОЛОНТЕРАМИ</h1>  
+<h1>О РАБОТЕ ВОЛОНТЕРАМИ</h1> 
+
 Вы чувствуете, что хотели бы не только передавать помощь, но и стать нашим постоянным помощником?
 <br/><br/>
 <b>Первое</b>, что нужно сделать, это оценить свое время и силы. Главное правило — сделать это после того, как первая самая сильная эмоция уйдет. Только тогда вы сможете ответить себе на вопрос: а что я могу сделать лично и сколько своего личного времени я смогу выделять на это регулярно?
@@ -8,6 +9,7 @@
 <br/><br/>
 <b>Третье</b> — заполнить анкету на нашем сайте. Узнать, когда ближайшая встреча волонетров. Прочитать список вакансий , может именно ваши профессиональные качества окажутся очень востребованны.
 <br/><br/>
+<img src="../../assets/img/vol.jpg" width="100%"> 
 Самое главное, отнестись к возможности стать волонтером со всей серьезностью и отвественностью. Наша общая работа, как калейдоском, складывается из сотен ваших волонтерских работ. И то, что у нас получается или не получается, это результат действия всех и каждого из нас.
 <br/><br/>
 Не обижайтесь, если вы сразу не получили ответ на свою анкету. Возможны некоторые накладки. Не стесняйтесь, отправьте анкету второй раз, может она потерялась. 
@@ -30,6 +32,7 @@
               <div class="card card-body">
                   <form>
                       <div class="pages">
+                        <h1>АНКЕТА</h1>
                       <div class="form-row">
                         <div class="form-group col-md-6">
                           <label for="inputName"><strong>Имя</strong></label>
@@ -103,104 +106,104 @@
                             </div>
                      <table class="table"> 
                        <tr>
-                        <td>
+                        <td width="25%" class="projects">
                             <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                            <label class="form-check-label" for="inlineCheckbox1"><strong>Работа на пункте сбора помощи</strong> <br/> (сортировка, погрузка-разгрузка)</label>
+                            <label class="form-check-label" for="inlineCheckbox1" style="font-size: 14px"><strong>Работа на пункте сбора помощи</strong> <br/> (сортировка, погрузка-разгрузка)</label>
                        
                         </td>
-                         <td> 
+                         <td width="25%" class="projects"> 
                             <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                            <label class="form-check-label" for="inlineCheckbox2"><strong>Курьерская помощь</strong></label>
+                            <label class="form-check-label" for="inlineCheckbox2" style="font-size: 14px"><strong>Курьерская помощь</strong></label>
                        
                         </td>
-                        <td>
+                        <td width="25%" class="projects">
                     
                             <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                            <label class="form-check-label" for="inlineCheckbox3"><strong>Работа на телефоне</strong> <br/> (звонить на мобильные телефоны со своего личного телефона)</label>
+                            <label class="form-check-label" for="inlineCheckbox3" style="font-size: 14px"><strong>Работа на телефоне</strong> <br/> (звонить на мобильные телефоны со своего личного телефона)</label>
                        
                         </td>
                         </tr>
                         <tr> 
-                          <td><input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
-                              <label class="form-check-label" for="inlineCheckbox4"><strong>Административная работа</strong><br/> (возможность звонить в будни, в рабочее время; доступ в Интернет)</label>
+                          <td width="25%" class="projects"><input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
+                              <label class="form-check-label" for="inlineCheckbox4" style="font-size: 14px"><strong>Административная работа</strong><br/> (возможность звонить в будни, в рабочее время; доступ в Интернет)</label>
                             </td>
                               
                          
-                           <td> 
+                           <td width="25%" class="projects"> 
                                 <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
-                                <label class="form-check-label" for="inlineCheckbox5"><strong>Организация мероприятий</strong></label>
+                                <label class="form-check-label" for="inlineCheckbox5" style="font-size: 14px"><strong>Организация мероприятий</strong></label>
                               
                             </td>
-                            <td>
+                            <td width="25%" class="projects">
                         
                                   <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="option6">
-                                  <label class="form-check-label" for="inlineCheckbox6"><strong>Организация процессов, ответственность за определенный объем работы</strong></label>
+                                  <label class="form-check-label" for="inlineCheckbox6" style="font-size: 14px"><strong>Организация процессов, ответственность за определенный объем работы</strong></label>
                                 
                               </td>
                               </tr>
                               <tr>
-                                <td>
+                                <td width="33%" class="projects">
                                     <input class="form-check-input" type="checkbox" id="inlineCheckbox7" value="option7">
-                                    <label class="form-check-label" for="inlineCheckbox7"><strong>Профессиональное написание статей</strong></label>
+                                    <label class="form-check-label" for="inlineCheckbox7" style="font-size: 14px"><strong>Профессиональное написание статей</strong></label>
                                   </td>
-                                 <td> 
+                                 <td width="33%" class="projects"> 
                                       <input class="form-check-input" type="checkbox" id="inlineCheckbox8" value="option8">
-                                      <label class="form-check-label" for="inlineCheckbox8"><strong>Участие в мероприятиях</strong> <br/>(выставки, акции, раздача листовок)</label>
+                                      <label class="form-check-label" for="inlineCheckbox8" style="font-size: 14px"><strong>Участие в мероприятиях</strong> <br/>(выставки, акции, раздача листовок)</label>
                                     </td>
-                                    <td><input class="form-check-input" type="checkbox" id="inlineCheckbox8" value="option9">
-                                      <label class="form-check-label" for="inlineCheckbox8"><strong>Помощь в полиграфии</strong> <br/>(дизайн)</label>
+                                    <td width="33%" class="projects"><input class="form-check-input" type="checkbox" id="inlineCheckbox9" value="option9">
+                                      <label class="form-check-label" for="inlineCheckbox9" style="font-size: 14px"><strong>Помощь в полиграфии</strong> <br/>(дизайн)</label>
                                   </td>
                                   </tr>
                                   <tr>
-                                      <td>
-                                          <input class="form-check-input" type="checkbox" id="inlineCheckbox9" value="option9">
-                                          <label class="form-check-label" for="inlineCheckbox9"><strong>Помощь в полиграфии</strong> <br/> (тиражирование)</label>
+                                      <td width="33%" class="projects">
+                                          <input class="form-check-input" type="checkbox" id="inlineCheckbox10" value="option10">
+                                          <label class="form-check-label" for="inlineCheckbox10" style="font-size: 14px"><strong>Помощь в полиграфии</strong> <br/> (тиражирование)</label>
                                         </td>
-                                       <td> 
-                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox10" value="option10">
-                                            <label class="form-check-label" for="inlineCheckbox10"><strong>Проведение мастер-классов и обучающих занятий для детей и волонтеров</strong></label>
+                                       <td width="33%" class="projects"> 
+                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox11" value="option11">
+                                            <label class="form-check-label" for="inlineCheckbox11" style="font-size: 14px"><strong>Проведение мастер-классов и обучающих занятий для детей и волонтеров</strong></label>
                                           </td>
-                                          <td><input class="form-check-input" type="checkbox" id="inlineCheckbox11" value="option11">
-                                            <label class="form-check-label" for="inlineCheckbox11"><strong>Видеосъемка детей (профессионально) для устройства их в семьи</strong></label>
+                                          <td width="33%" class="projects"><input class="form-check-input" type="checkbox" id="inlineCheckbox12" value="option12">
+                                            <label class="form-check-label" for="inlineCheckbox12" style="font-size: 14px"><strong>Видеосъемка детей (профессионально) для устройства их в семьи</strong></label>
                                         </td>
                                         </tr>
                                         <tr>
-                                            <td>
-                                                <input class="form-check-input" type="checkbox" id="inlineCheckbox12" value="option12">
-                                                <label class="form-check-label" for="inlineCheckbox12"><strong>Помощь приемным семьям</strong></label>
+                                            <td width="33%" class="projects">
+                                                <input class="form-check-input" type="checkbox" id="inlineCheckbox13" value="option13">
+                                                <label class="form-check-label" for="inlineCheckbox13" style="font-size: 14px"><strong>Помощь приемным семьям</strong></label>
                                               </td>
-                                             <td> 
-                                                  <input class="form-check-input" type="checkbox" id="inlineCheckbox13" value="option13">
-                                                  <label class="form-check-label" for="inlineCheckbox13"><strong>Помощь семьям в трудной жизненной ситуации</strong></label>
+                                             <td width="33%" class="projects"> 
+                                                  <input class="form-check-input" type="checkbox" id="inlineCheckbox14" value="option14">
+                                                  <label class="form-check-label" for="inlineCheckbox14" style="font-size: 14px"><strong>Помощь семьям в трудной жизненной ситуации</strong></label>
                                                 </td>
-                                                <td><input class="form-check-input" type="checkbox" id="inlineCheckbox14" value="option14">
-                                                  <label class="form-check-label" for="inlineCheckbox14"><strong>Психолог</strong> <br/>(профессиональная помощь)</label>
+                                                <td width="33%" class="projects"><input class="form-check-input" type="checkbox" id="inlineCheckbox15" value="option15">
+                                                  <label class="form-check-label" for="inlineCheckbox15" style="font-size: 14px"><strong>Психолог</strong> <br/>(профессиональная помощь)</label>
                                               </td>
                                               </tr>
                                               <tr>
-                                                  <td>
-                                                      <input class="form-check-input" type="checkbox" id="inlineCheckbox15" value="option15">
-                                                      <label class="form-check-label" for="inlineCheckbox15"><strong>Юрист</strong> <br/>(профессиональная помощь)</label>
+                                                  <td width="33%" class="projects">
+                                                      <input class="form-check-input" type="checkbox" id="inlineCheckbox16" value="option16">
+                                                      <label class="form-check-label" for="inlineCheckbox16" style="font-size: 14px"><strong>Юрист</strong> <br/>(профессиональная помощь)</label>
                                                     </td>
-                                                   <td> 
-                                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox16" value="option16">
-                                                        <label class="form-check-label" for="inlineCheckbox16"><strong>Программирование</strong> <br/>(PHP, SQL, прочее)</label>
+                                                   <td width="33%" class="projects"> 
+                                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox17" value="option17">
+                                                        <label class="form-check-label" for="inlineCheckbox17" style="font-size: 14px"><strong>Программирование</strong> <br/>(PHP, SQL, прочее)</label>
                                                       </td>
-                                                      <td><input class="form-check-input" type="checkbox" id="inlineCheckbox17" value="option17">
-                                                        <label class="form-check-label" for="inlineCheckbox17"><strong>Специалист по привлечению средств</strong></label>
+                                                      <td width="33%" class="projects"><input class="form-check-input" type="checkbox" id="inlineCheckbox18" value="option18">
+                                                        <label class="form-check-label" for="inlineCheckbox18" style="font-size: 14px"><strong>Специалист по привлечению средств</strong></label>
                                                     </td>
                                                     </tr>
                                                     <tr>
-                                                        <td>
-                                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox18" value="option18" >
-                                                            <label class="form-check-label" for="inlineCheckbox18" ><strong>Помощь транспортом</strong> <br/>(перевозки по Москве и Московской области)</label>
+                                                        <td width="33%" class="projects">
+                                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox19" value="option19" >
+                                                            <label class="form-check-label" for="inlineCheckbox19" style="font-size: 14px"><strong>Помощь транспортом</strong> <br/>(перевозки по Москве и Московской области)</label>
                                                           </td>
-                                                         <td> 
-                                                              <input class="form-check-input" type="checkbox" id="inlineCheckbox19" value="option19">
-                                                              <label class="form-check-label" for="inlineCheckbox19"><strong>Помощь транспортом</strong> <br/>(перевозки по другим регионам РФ)</label>
+                                                         <td width="33%" class="projects"> 
+                                                              <input class="form-check-input" type="checkbox" id="inlineCheckbox20" value="option20">
+                                                              <label class="form-check-label" for="inlineCheckbox20" style="font-size: 14px"><strong>Помощь транспортом</strong> <br/>(перевозки по другим регионам РФ)</label>
                                                             </td>
-                                                            <td><input class="form-check-input" type="checkbox" id="inlineCheckbox20" value="option20">
-                                                              <label class="form-check-label" for="inlineCheckbox20"><strong>Перечислить деньги на счет</strong></label>
+                                                            <td width="33%" class="projects"><input class="form-check-input" type="checkbox" id="inlineCheckbox21" value="option21">
+                                                              <label class="form-check-label" for="inlineCheckbox21" style="font-size: 14px"><strong>Перечислить деньги на счет</strong></label>
                                                           </td>
                                                           </tr>
                                   </table>
@@ -217,8 +220,8 @@
                         </div>
                       </div>
                        
-                      <button type="submit" class="btn  btn-primary btn1" data-toggle="collapse" href="#anketa2" role="button" aria-expanded="false" aria-controls="anketa">Отправить анкету</button>
-                      <div class="collapse multi-collapse" id="anketa2">
+                      <button type="submit" class="btn  btn-primary btn1" data-toggle="collapse" href="#anketa" role="button" aria-expanded="false" aria-controls="anketa">Отправить анкету</button>
+                      <div class="collapse multi-collapse" id="anketa">
                           <div>
                             <br/>
                               Спасибо!
@@ -227,8 +230,7 @@
                           </div></div>
                           </div>
                     </form>
-                    
-                    <router-outlet></router-outlet> 
+                  
               </div>
             </div>
           
