--- a/src/app/requisites/requisites.component.html
+++ b/src/app/requisites/requisites.component.html
@@ -1,6 +1,9 @@
 <div class="pages">
       
     <h1>РЕКВИЗИТЫ <img src="../../assets/img/req.PNG" ></h1>
+<table class="table">
+<tr> 
+<td>
 <b>СБЕРБАНК </b>
 <br/>
 Получатель: Благотворительный фонд "Волонтеры в помощь детям-сиротам"
@@ -15,6 +18,17 @@
 <br/>
 БИК *********
 <br/> 
-Если пожертвование переводится от нерезидента, то следует указывать код валютной операции: 70030
+Если пожертвование переводится от нерезидента, то следует указывать код валютной операции: 70030 
+
+</td>
+<td > 
+    <div style="text-align: right"> 
+<img src="../../assets/img/thank.jpg" style="width:50%">
+</div>
+</td>
+</tr>
+</table>
 </div> 
+
+
 <router-outlet></router-outlet> 
