some final changes

--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -1,5 +1,5 @@
 <nav class="nav nav-pills flex-column flex-sm-row sgrid-N">
-  <div class="sticky-top text">  <img src="../../assets/img/logo.png"> <img src="../../assets/img/В твоих руках.png"> </div>
+  <div class="sticky-top text">  <a routerLink=""><img src="../../assets/img/logo.png"></a>  <a routerLink=""><img src="../../assets/img/В твоих руках.png"></a> </div>
   <div class="mx-auto" style="width: 200px;">
     <div class="container">
       <a routerLink="/requisites" routerLinkActive="active"><button id="button" class="btn btn1">Пожертвовать</button></a>
