Revert "new page"
This reverts commit 584f8acac3ba9edce7e54669674ea1a6ba7fcbfe.

--- a/src/app/parents/parents.component.html
+++ b/src/app/parents/parents.component.html
@@ -15,6 +15,11 @@
         попадали в сиротские учреждения. В том случае, если их кровные или приемные родители оказались
         в сложной жизненной ситуации.
       </li>
+      <li>
+        На сайте проекта "Территория без сирот"
+        <a href="http://opekaweb.ru/">www.opekaweb.ru</a>  можно найти фото- и видеоанкеты детей-сирот, которым
+        необходима семья.
+      </li>
       <li>Мы поддерживаем приемных родителей в лечении и реабилитации детей с особенностями развития
         и сложными заболеваниями в рамках <strong>проекта "Близкие люди"</strong>.</li>
     </ul>
