--- a/src/app/carousel2/carousel2.component.html
+++ b/src/app/carousel2/carousel2.component.html
@@ -1,27 +1,27 @@
 
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="4000">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" ></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2" ></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="3" ></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" data-interval="200"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1" data-interval="200"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2" data-interval="200"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3" data-interval="200"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="../../assets/img/car21.jpg" alt="First slide">
-
+    
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="../../assets/img/car22.jpg" alt="Second slide">
-
+     
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="../../assets/img/car23.jpg" alt="Third slide">
-
+      
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="../../assets/img/car24.jpg" alt="Forth slide">
-
+      
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
